index.html e css finalizado

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <!-- Início da main -->
         <main>
             <div id="part1">
-                <img src="./img/proposta.png" alt="">
                 <div>
                     <h2>Nossa proposta</h2>
                     <p>Em estados como o Rio de Janeiro há uma grande quantidade de pessoas que tenham algumas deficiências físicas, porem a que mais acaba sofrendo varias dificuldades são os cadeirantes. </p>
@@ -53,16 +52,18 @@
             </div>
         </main>
         <footer>
-            <h3>Fale conosco</h3>
-            <div>
+            <h3>Fale conosco:</h3>
+            <div id="redeSociais">
                 <a href=""><img src="./icons/instagram.png" alt=""></a>
                 <a href=""><img src="./icons/linkedin.png" alt=""></a>
                 <a href=""><img src="./icons/email.png" alt=""></a>
             </div>
             <p>Imprimir |  Termos de uso |  Politíca de Privacidade</p>
 
-            <p>Todos os direitos reservados</p>
-            <p>By Epilogi&copy;</p>
+            <div>
+                <p>Todos os direitos reservados</p>
+                <p>By Epilogi&copy;</p>
+            </div>
         </footer>
 
     </div>
