--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -8,14 +8,151 @@
     <title>Epilogi</title>
 </head>
 <body>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242074.2455007548!2d-43.595262858283704!3d-22.92324503688398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1680463993335!5m2!1spt-BR!2sbr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        
-    </iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242074.2455007548!2d-43.595262858283704!3d-22.92324503688398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1680463993335!5m2!1spt-BR!2sbr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <header>
-        <img src="../icons/hamburguer.png" alt="">
-        <input type="search">
+        <img id="hamburguerAbrir" src="../icons/hamburguer.png" alt="">
+        <input type="text">
     </header>
+    <div id="carrossel">
+        <div class="card">
+            <div class="cardPart1">
+                <img src="../img/MCdonaldsImgae.png" alt="">
+                <div class="cardPart1Second">
+                    <p class="titleCard">MC Donalds</p>
+                    <div class="stars">
+                        <p>3,6</p>
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowHalf.png" alt="">
+                        <img src="../icons/StarYellow.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cardPart2">
+                <button class="route"></button>
+                <button class="favorite"></button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardPart1">
+                <img src="../img/MCdonaldsImgae.png" alt="">
+                <div class="cardPart1Second">
+                    <p class="titleCard">MC Donalds</p>
+                    <div class="stars">
+                        <p>3,6</p>
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowHalf.png" alt="">
+                        <img src="../icons/StarYellow.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cardPart2">
+                <button class="route"></button>
+                <button class="favorite"></button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardPart1">
+                <img src="../img/MCdonaldsImgae.png" alt="">
+                <div class="cardPart1Second">
+                    <p class="titleCard">MC Donalds</p>
+                    <div class="stars">
+                        <p>3,6</p>
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowHalf.png" alt="">
+                        <img src="../icons/StarYellow.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cardPart2">
+                <button class="route"></button>
+                <button class="favorite"></button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardPart1">
+                <img src="../img/MCdonaldsImgae.png" alt="">
+                <div class="cardPart1Second">
+                    <p class="titleCard">MC Donalds</p>
+                    <div class="stars">
+                        <p>3,6</p>
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowHalf.png" alt="">
+                        <img src="../icons/StarYellow.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cardPart2">
+                <button class="route"></button>
+                <button class="favorite"></button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardPart1">
+                <img src="../img/MCdonaldsImgae.png" alt="">
+                <div class="cardPart1Second">
+                    <p class="titleCard">MC Donalds</p>
+                    <div class="stars">
+                        <p>3,6</p>
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowHalf.png" alt="">
+                        <img src="../icons/StarYellow.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cardPart2">
+                <button class="route"></button>
+                <button class="favorite"></button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardPart1">
+                <img src="../img/MCdonaldsImgae.png" alt="">
+                <div class="cardPart1Second">
+                    <p class="titleCard">MC Donalds</p>
+                    <div class="stars">
+                        <p>3,6</p>
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowFull.png" alt="">
+                        <img src="../icons/StarYellowHalf.png" alt="">
+                        <img src="../icons/StarYellow.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cardPart2">
+                <button class="route"></button>
+                <button class="favorite"></button>
+            </div>
+        </div>
+
+    </div>
+    <div id="informationsUser">
+        <button id="voltar"></button>
+        <div id="imageUser">
+            <img src="../img/Customer.png" alt="">
+        </div>
+        <p id="nameUser">Name</p>
+        <div id="favoritos">
+            <img src="../icons/starWhite.png" alt="">
+            <p>Favoritos</p>
+            <img id="expand" src="../icons/ExpandArrow.png" alt="">
+        </div>
+        <footer>
+            <p>Todos os direiros reservados</p>
+            <img src="../img/LOGO.png" alt="">
+        </footer>
+    </div>
 
     <script src="../script/script1.js"></script>
 </body>
