--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -12,7 +12,7 @@
 
     <header>
         <img id="hamburguerAbrir" src="../icons/hamburguer.png" alt="">
-        <input type="text">
+        <input type="text" placeholder="Pesquisar">
     </header>
     <div id="carrossel">
         <div class="card">
